css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

a {
    color: inherit;
    text-decoration: none;
}

ul {
    list-style: none;
}

body {
    background-color: black;
    font-family: "Poppins", sans-serif;
    color: white;
}

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px 30px;
    margin-bottom: 10px;
    color: white;
    border-radius: 8px;
}

nav ul.menu {
    display: flex;
    gap: 20px;
}

nav ul li {
    font-weight: 500;
    transition: color 0.3s ease;
    font-size: 1rem;
}

nav ul li:hover {
    color: #8747ff;
}

.container {
    max-width: 1400px;
    width: 100%;
    margin: 0 auto;
    padding: 0 40px;
}

.title {
    font-family: 'Bebas Neue', sans-serif;
    font-size: 2.5rem;
    color: #b691ff;
    margin-top: 0px;
    margin-bottom: 30px;
    text-align: center;
}
.title h1 {
    font-size: inherit;
    line-height: 1.1;
}

.hero {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    min-height: calc(100vh - 80px);
    padding: 20px 20px;
    background-color: #45116c;
    border-radius: 8px;
    box-shadow: 0 0 30px rgba(151, 86, 255, 0.3);
}

.hero-bottom-content {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
    gap: 80px;
    width: 100%;
}

.hero-text {
    max-width: 650px;
    text-align: left;
    flex-shrink: 1;
    flex-grow: 1;
}

.hero-text p {
    font-size: 1.2rem;
    line-height: 1.7;
    margin-bottom: 1.2em;
}

.hero-text p:last-child{
    margin-bottom: 0;
}

.hero-image {
    max-width: 300px;
    width: 100%;
    height: auto;
    border-radius: 50%;
    border: 7px solid #45116c;
    box-shadow: 0 0 50px rgba(135, 71, 255, 1);
    flex-shrink: 0;
    object-fit: cover;
}

.contact {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 20px 0;
    margin-top: 20px;
    background-color: #45116c;
    border-radius: 8px;
}

.contact-links {
    display: flex;
    gap: 20px;
    margin-top: 10px;
    flex-direction: row;
}

.instagram,
.linkedin,
.github {
    border: #b691ff 2px solid;
    padding: 10px 20px;
    border-radius: 8px;
}   

.instagram:hover,
.linkedin:hover,
.github:hover {
    background-color: #b691ff;
    color: black;
    transition: background-color 0.5s ease;
}

